link colors in the header are changed. Copyright text changed

--- a/src/app/main-page/activities-section/activities-section.component.html
+++ b/src/app/main-page/activities-section/activities-section.component.html
@@ -5,7 +5,7 @@
       совокупности</h3>
 
     <div class="activities__list">
-      <div class="activity activity-1">Хареография</div>
+      <div class="activity activity-1">Хореография</div>
       <div class="activity activity-2">Актерское мастерство</div>
       <div class="activity activity-3">Вокальное исполнение</div>
       <div class="activity activity-4">Юмор</div>
