--- a/src/app/master/footer/footer.component.html
+++ b/src/app/master/footer/footer.component.html
@@ -13,11 +13,10 @@
       <div class="social__link-container">
         <a href="https://vk.com/tm_mospolytech" target="_blank" class="social__link"><img src="assets/images/social-vk.png" alt="" class="social__link-image"></a>
         <a href="https://www.instagram.com/tm_mospolytech" target="_blank" class="social__link"><img src="assets/images/social-instagram.png" alt="" class="social__link-image"></a>
-<!--        <a href="" class="social__link"><img src="assets/images/social-twitter.png" alt="" class="social__link-image"></a>-->
       </div>
     </div>
   </div>
   <span class="copyright">
-    Сайт создали студенты Московского Политеха <br class="copyright_br"> <a href="https://vk.com/megas781" target="_blank">Калачев Глеб</a> и <a href="https://vk.com/nastyakudryashova20" target="_blank">Анастасия Кудряшова</a>
+    Сайт создали студенты <a href="https://fit.mospolytech.ru">ИТ факультета</a> Московского Политеха <br class="copyright_br"> <a href="https://vk.com/megas781" target="_blank">Калачев Глеб</a> и <a href="https://vk.com/nastyakudryashova20" target="_blank">Анастасия Кудряшова</a>
   </span>
 </footer>
