added "on-page-change" fade animation

--- a/src/app/contacts-page/contacts-page.component.html
+++ b/src/app/contacts-page/contacts-page.component.html
@@ -1,32 +1,33 @@
 <!--<h1 style="margin: 150px 0 0px; text-align: center">Самвел Микиртычев в ВК: <a href="https://vk.com/samvelmik" target="_blank">samvelmik</a></h1>-->
 <!--<div style="text-align: center; color: gray; font-size: 10px;margin-bottom: 250px;">(заглушка)</div>-->
 <h1 class="page-header">Контакты</h1>
-<div class="container contacts-container">
+<div class="page">
+  <div class="container contacts-container">
 
-  <div class="lenochka-container">
-    <h3>Ты студент/абитуриент?<br>
-      Хочешь узнать, как попасть в коллектив?<br>
-      Есть вопросы о Творческой Мастерской?<br>
-      Спроси у Леночки!</h3>
-    <div class="contact">
-      <img class="contact__image" src="https://sun9-58.userapi.com/c855120/v855120598/179a37/hhjuPj2XFFw.jpg" alt="">
-      <div class="contact__text-container">
-        <h3 class="contact__title">Елена Иудина</h3>
-        <p class="contact__subtitle">Администратор</p>
-        <div class="links">
-          <a class="links__link" href="https://vk.com/coldcoffee" target="_blank">ВКонтакте</a>
+    <div class="lenochka-container">
+      <h3>Ты студент/абитуриент?<br>
+        Хочешь узнать, как попасть в коллектив?<br>
+        Есть вопросы о Творческой Мастерской?<br>
+        Спроси у Леночки!</h3>
+      <div class="contact">
+        <img class="contact__image" src="https://sun9-58.userapi.com/c855120/v855120598/179a37/hhjuPj2XFFw.jpg" alt="">
+        <div class="contact__text-container">
+          <h3 class="contact__title">Елена Иудина</h3>
+          <p class="contact__subtitle">Администратор</p>
+          <div class="links">
+            <a class="links__link" href="https://vk.com/coldcoffee" target="_blank">ВКонтакте</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="email-box">
-    <h3>По вопросам сотрудничества:</h3>
-    <p class="email-parag">Отдел культурно-массовой работы<br>
-      Московского Политеха:<br>
-      <a href="mailto:okmr@mospolytech.ru">okmr@mospolytech.ru</a></p>
+    <div class="email-box">
+      <h3>По вопросам сотрудничества:</h3>
+      <p class="email-parag">Отдел культурно-массовой работы<br>
+        Московского Политеха:<br>
+        <a href="mailto:okmr@mospolytech.ru">okmr@mospolytech.ru</a></p>
+    </div>
   </div>
 </div>
 
-<!--<app-join-us [displayHint]="false"></app-join-us>-->
 
