--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,30 +1,32 @@
-<section class="intro-section">
-  <div class="container">
-    <div class="intro__body">
-      <img class="intro__image" src="../../assets/images/text-red-logo.png" alt="">
-      <h3 class="intro__greeting"></h3>
+<div class="page">
+  <section class="intro-section">
+    <div class="container">
+      <div class="intro__body">
+        <img class="intro__image" src="../../assets/images/text-red-logo.png" alt="">
+        <h3 class="intro__greeting"></h3>
+      </div>
+      <img src="../../assets/images/images-by-nastya/" alt="">
     </div>
-    <img src="../../assets/images/images-by-nastya/" alt="">
-  </div>
-  <div class="intro__arrow-down"></div>
-</section>
+    <div class="intro__arrow-down"></div>
+  </section>
 
-<app-activities-section
-  [scrollCtrl]="scrollCtrl"></app-activities-section>
+  <app-activities-section
+    [scrollCtrl]="scrollCtrl"></app-activities-section>
 
-<app-you-can-section
-  [scrollCtrl]="scrollCtrl"></app-you-can-section>
+  <app-you-can-section
+    [scrollCtrl]="scrollCtrl"></app-you-can-section>
 
-<app-our-plays-section
-  [scrollCtrl]="scrollCtrl"></app-our-plays-section>
+  <app-our-plays-section
+    [scrollCtrl]="scrollCtrl"></app-our-plays-section>
 
-<app-children-plays-section
-  [scrollCtrl]="scrollCtrl"></app-children-plays-section>
+  <app-children-plays-section
+    [scrollCtrl]="scrollCtrl"></app-children-plays-section>
 
-<app-awards-section
-  [scrollCtrl]="scrollCtrl"></app-awards-section>
+  <app-awards-section
+    [scrollCtrl]="scrollCtrl"></app-awards-section>
 
-<app-final-slogan-section
-  [scrollCtrl]="scrollCtrl"></app-final-slogan-section>
+  <app-final-slogan-section
+    [scrollCtrl]="scrollCtrl"></app-final-slogan-section>
 
-<app-join-us [displayHint]="true"></app-join-us>
+  <app-join-us [displayHint]="true"></app-join-us>
+</div>
