--- a/src/app/mentors-page/mentors-page.component.html
+++ b/src/app/mentors-page/mentors-page.component.html
@@ -1,22 +1,24 @@
 <h1 class="page-header">Руководители коллектива</h1>
-<div class="container">
-  <div class="mentor-wrapper">
-    <div class="mentor">
+<div class="page">
+  <div class="container">
+    <div class="mentor-wrapper">
+      <div class="mentor">
 
-      <img class="image mentor-image" src="../../assets/images/VLADIMIR_UDOVIK.jpg" alt="Удовик Владимир Евгениевич">
-      <div class="mentor-name-wrapper">
-        <div class="mentor-surname">Удовик</div>
-        <div class="mentor-name">Владимир Евгениевич</div>
+        <img class="image mentor-image" src="../../assets/images/VLADIMIR_UDOVIK.jpg" alt="Удовик Владимир Евгениевич">
+        <div class="mentor-name-wrapper">
+          <div class="mentor-surname">Удовик</div>
+          <div class="mentor-name">Владимир Евгениевич</div>
+        </div>
+        <div class="mentor-position">Художественный руководитель<br> Режиссёр-постановщик</div>
       </div>
-      <div class="mentor-position">Художественный руководитель<br> Режиссёр-постановщик</div>
-    </div>
-    <div class="mentor">
-      <img class="image mentor-image" src="../../assets/images/OLGA_OLEGONA.jpg" alt="Черных Ольга Олеговна">
-      <div class="mentor-name-wrapper">
-        <div class="mentor-surname">Черных</div>
-        <div class="mentor-name">Ольга Олеговна</div>
+      <div class="mentor">
+        <img class="image mentor-image" src="../../assets/images/OLGA_OLEGONA.jpg" alt="Черных Ольга Олеговна">
+        <div class="mentor-name-wrapper">
+          <div class="mentor-surname">Черных</div>
+          <div class="mentor-name">Ольга Олеговна</div>
+        </div>
+        <div class="mentor-position">Помощник руководителя</div>
       </div>
-      <div class="mentor-position">Помощник руководителя</div>
     </div>
   </div>
 </div>
