--- a/src/style/style.general.css
+++ b/src/style/style.general.css
@@ -19,10 +19,30 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 400;
 }
 
+.page {
+
+}
+
 .page-header {
   text-align: center;
   margin-bottom: 40px;
   font-size: 32px;
+}
+
+.page, .page-header {
+  animation-name: fadeEnter;
+  animation-duration: 1.4s;
+  transform-origin: top;
+}
+@keyframes fadeEnter {
+  from {
+    opacity: 0.2;
+    transform: scale(1.01);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 .page-subheader {
   text-align: center;
