--- a/src/app/main-page/our-plays-section/our-plays-section.component.css
+++ b/src/app/main-page/our-plays-section/our-plays-section.component.css
@@ -12,7 +12,7 @@
   /*justify-content: center;*/
   /*align-items: center;*/
 
-  /*padding: 60px;*/
+  padding: 16px;
   /*position: relative;*/
 }
 .our-plays__swiper {
@@ -24,16 +24,17 @@
   /*margin-bottom: 60px;*/
 }
 .swiper-container.our-plays__swiper {
-  /*overflow: visible !important;*/
+  overflow: visible;
   /*padding: 32px 0;*/
 }
 .our-plays__swiper .swiper-wrapper {
-  /*overflow: visible !important;*/
-  /*overflow-x: hidden !important;*/
+
 }
 .our-plays__slide {
   /*transition: 0.3s ease-out;*/
-  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .our-plays__slide.swiper-slide-active {
   /*transform: scale(1.1);*/
@@ -46,14 +47,15 @@
   /*margin: 0 auto;*/
   /*min-height: 320px;*/
   /*max-height: 64vh;*/
-  width: 100%;
-  height: 100%;
+  /*width: 100%;*/
   object-fit: contain;
   /*object-position: center;*/
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  max-height: 80vh;
 }
-.our-plays__pagination {
-  /*bottom: -40px;*/
+.swiper-pagination.our-plays__pagination {
+  position: initial;
+  margin-top: 8px;
 }
 
 @media all and (max-width: 480px) {
