--- a/src/app/master/footer/footer.component.html
+++ b/src/app/master/footer/footer.component.html
@@ -17,6 +17,6 @@
     </div>
   </div>
   <span class="copyright">
-    Сайт создали студенты <a href="https://fit.mospolytech.ru">ИТ факультета</a> Московского Политеха <br class="copyright_br"> <a href="https://vk.com/megas781" target="_blank">Калачев Глеб</a> и <a href="https://vk.com/nastyakudryashova20" target="_blank">Анастасия Кудряшова</a>
+    Сайт создали студенты <a href="https://fit.mospolytech.ru">ИТ факультета</a><br class="copyright_br_1"> Московского Политеха <br class="copyright_br_2"> <a href="https://vk.com/megas781" target="_blank">Калачев Глеб</a> и <a href="https://vk.com/nastyakudryashova20" target="_blank">Анастасия Кудряшова</a>
   </span>
 </footer>
