--- a/src/app/members-page/member-view/member-view.component.html
+++ b/src/app/members-page/member-view/member-view.component.html
@@ -11,7 +11,7 @@
 <!--            </div>-->
 <!--    </ng-template>-->
   </a>
-  <div style="flex-shrink: 1">
+  <div class="text-container">
     <div class="member-view__title">{{member.getName()}}</div>
     <div class="member-view__subtitle">{{member.position}}</div>
   </div>
