--- a/src/app/mentors-page/mentors-page.component.html
+++ b/src/app/mentors-page/mentors-page.component.html
@@ -4,7 +4,8 @@
     <div class="mentor-wrapper">
       <div class="mentor">
 
-        <img class="image mentor-image" src="../../assets/images/VLADIMIR_UDOVIK.jpg" alt="Удовик Владимир Евгениевич">
+        <a href=""><img class="image mentor-image" src="../../assets/images/VLADIMIR_UDOVIK.jpg"
+                          alt="Удовик Владимир Евгениевич"></a>
         <div class="mentor-name-wrapper">
           <div class="mentor-surname">Удовик</div>
           <div class="mentor-name">Владимир Евгениевич</div>
