many much mobile adaptivity improvements!

--- a/src/app/contacts-page/contacts-page.component.html
+++ b/src/app/contacts-page/contacts-page.component.html
@@ -10,7 +10,7 @@
         Есть вопросы о Творческой Мастерской?<br>
         Спроси у Леночки!</h3>
       <div class="contact">
-        <img class="contact__image" src="https://sun9-58.userapi.com/c855120/v855120598/179a37/hhjuPj2XFFw.jpg" alt="">
+        <img class="contact__image" src="https://sun9-58.userapi.com/c855120/v855120598/179a37/hhjuPj2XFFw.jpg" alt="Фотография Леночки">
         <div class="contact__text-container">
           <h3 class="contact__title">Елена Иудина</h3>
           <p class="contact__subtitle">Администратор</p>
