--- a/src/app/events-page/event-view/event-view.component.html
+++ b/src/app/events-page/event-view/event-view.component.html
@@ -1,6 +1,6 @@
 <div class="event-view">
   <div class="event-view__image-container">
-    <img src="{{event.photoUrl}}" alt="" class="event-view__image">
+    <img src="{{event.photoUrl}}" alt='Постер спектакля "{{event.title}}"' class="event-view__image">
   </div>
   <div class="event-view__text-container">
     <h3 class="event-view__title">{{event.title}}</h3>
