--- a/src/app/main-page/children-plays-section/children-plays-section.component.html
+++ b/src/app/main-page/children-plays-section/children-plays-section.component.html
@@ -23,7 +23,7 @@
     </div>
 
 
-
+    <div style="display: flex; justify-content: center"><img src="../../../assets/images/arrow-both-directions.png" alt="" class="arrow-both-directions"></div>
     <div class="swiper-container children-plays__swiper">
       <div class="swiper-wrapper">
         <div
@@ -35,7 +35,8 @@
         </div>
 
       </div>
-      <h3 class="children-play-name">{{plays[activeBulletIndex].title}}</h3>
+      <div class="year_mobile">{{plays[activeBulletIndex].year}}</div>
+      <div class="children-play-name">{{plays[activeBulletIndex].title}}</div>
     </div>
 
   </div>
