--- a/src/app/main-page/final-slogan-section/final-slogan-section.component.css
+++ b/src/app/main-page/final-slogan-section/final-slogan-section.component.css
@@ -2,6 +2,7 @@
 .final-slogan-section {
   padding: 140px 0 40px;
   color: var(--red);
+  min-height: 70vh;
 }
 .final-slogan-section .container {
   display: flex;
