--- a/src/app/main-page/our-plays-section/our-plays-section.component.html
+++ b/src/app/main-page/our-plays-section/our-plays-section.component.html
@@ -12,13 +12,13 @@
                                                         alt=""></div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-urok.jpg"
-                                                        alt=""></div>
+                                                        alt="Урок мужества"></div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-orakul.jpg"
-                                                        alt=""></div>
+                                                        alt="Оракул любви"></div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-petlya.jpg"
-                                                        alt=""></div>
+                                                        alt="Петля времени"></div>
       </div>
       <!-- Add Pagination -->
       <div class="swiper-pagination our-plays__pagination"></div>
