--- a/src/app/master/header/header.component.html
+++ b/src/app/master/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="logo">
       <a routerLink="/">
-        <img class="logo__image" src="assets/images/logo-mini.png" alt="логотип">
+        <img class="logo__image" src="assets/images/logo-mini.png" alt="Логотип">
       </a>
     </div>
     <div class="burger-button" (click)="burgerButtonTapped()"></div>
