--- a/src/app/reusable-modules/join-us/join-us.component.html
+++ b/src/app/reusable-modules/join-us/join-us.component.html
@@ -1,7 +1,7 @@
 <section class="join-us-section">
   <h3 *ngIf="displayHint" class="join-us__label">Хочешь к нам?</h3>
   <div class="join-us__link-container">
-    <a routerLink="contacts" target="_top" class="join-us__how-to-become-member-link">Как стать участником коллектива</a>
-    <a routerLink="events" target="_top" class="join-us__to-events-link">Узнать о ближайших выступлениях</a>
+    <a routerLink="/contacts" target="_top" class="join-us__how-to-become-member-link">Как стать участником коллектива</a>
+    <a routerLink="/events" target="_top" class="join-us__to-events-link">Узнать о ближайших выступлениях</a>
   </div>
 </section>
