--- a/src/app/main-page/awards-section/awards-section.component.css
+++ b/src/app/main-page/awards-section/awards-section.component.css
@@ -2,12 +2,14 @@
 .awards-section {
   background-color: var(--purple);
   color: var(--light-blue);
-  /*min-height: 720px;*/
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 16px;
+
+  min-height: 70vh;
+
 }
 .awards__body {
   background-size: cover;
