--- a/src/app/master/footer/footer.component.html
+++ b/src/app/master/footer/footer.component.html
@@ -11,8 +11,8 @@
     <div class="social">
       <div style="color: var(--blacklike)">Мы в социальных сетях:</div>
       <div class="social__link-container">
-        <a href="https://vk.com/tm_mospolytech" target="_blank" class="social__link"><img src="assets/images/social-vk.png" alt="" class="social__link-image"></a>
-        <a href="https://www.instagram.com/tm_mospolytech" target="_blank" class="social__link"><img src="assets/images/social-instagram.png" alt="" class="social__link-image"></a>
+        <a href="https://vk.com/tm_mospolytech" target="_blank" class="social__link"><img src="assets/images/social-vk.png" alt="VK" class="social__link-image"></a>
+        <a href="https://www.instagram.com/tm_mospolytech" target="_blank" class="social__link"><img src="assets/images/social-instagram.png" alt="Instagram" class="social__link-image"></a>
       </div>
     </div>
   </div>
