--- a/src/app/mentors-page/mentors-page.component.css
+++ b/src/app/mentors-page/mentors-page.component.css
@@ -13,6 +13,7 @@
   text-align: center;
 }
 
+
 .mentor-image {
   width: 300px;
   height: 300px;
@@ -32,4 +33,12 @@
 
 .mentor-position {
 
+}
+
+
+@media all and (max-width: 400px) {
+  .mentor-image {
+    height: 250px;
+    width: 250px;
+  }
 }
