mobile appearance bug fixes and stability improvements - added alt attribute for all images - added information about studying status of a member in the member-view compoenent - final slogan's TM image change to html-text - added attibute target="_top" to link in the header

--- a/src/app/main-page/children-plays-section/children-plays-section.component.css
+++ b/src/app/main-page/children-plays-section/children-plays-section.component.css
@@ -116,7 +116,7 @@
 }
 .children-plays__slide {
   height: 320px;
-  /*max-width: 200px;*/
+  max-width: 480px;
 }
 .children-plays__image {
   height: 100%;
