--- a/src/app/main-page/final-slogan-section/final-slogan-section.component.html
+++ b/src/app/main-page/final-slogan-section/final-slogan-section.component.html
@@ -5,7 +5,11 @@
     <!--      <div class="text-logo_p1">ТВОРЧЕСКАЯ</div>-->
     <!--      <div class="text-logo_p2">МАСТЕРСКАЯ</div>-->
     <!--    </div>-->
-    <img class="final-slogan__text-red-logo sl__part sl-1" src="../../assets/images/text-red-logo-micro.png" alt="">
+<!--    <img class="final-slogan__text-red-logo sl__part sl-1" src="../../assets/images/text-red-logo-micro.png" alt="ТВОРЧЕСКАЯ МАСТЕРСКАЯ">-->
+    <div class="finals-logan__tm">
+      <div class="finals-logan__tm_t">ТВОРЧЕСКАЯ</div>
+      <div class="finals-logan__tm_m">МАСТЕРСКАЯ</div>
+    </div>
     <div class="sl__part sl-2">это</div>
     <div class="sl__part sl-3">коллектив</div>
     <div class="sl__part sl-4">активных разносторонних людей</div>
