--- a/src/app/main-page/our-plays-section/our-plays-section.component.html
+++ b/src/app/main-page/our-plays-section/our-plays-section.component.html
@@ -9,16 +9,16 @@
         </div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-svetloe-budusheye.jpg"
-                                                        alt=""></div>
+                                                        alt='Спектакль "Семейные истории"'></div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-urok.jpg"
-                                                        alt="Урок мужества"></div>
+                                                        alt='Драматический пектакль "Урок мужества"'></div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-orakul.jpg"
-                                                        alt="Оракул любви"></div>
+                                                        alt='Драматический спектакль "Оракул любви"'></div>
         <div class="swiper-slide our-plays__slide"><img class="our-plays__slide-image image"
                                                         src="../../assets/images/images-by-nastya/sec-4-petlya.jpg"
-                                                        alt="Петля времени"></div>
+                                                        alt='Музыкальный спектакль "Петля времени"'></div>
       </div>
       <!-- Add Pagination -->
       <div class="swiper-pagination our-plays__pagination"></div>
