--- a/src/app/members-page/member-view/member-view.component.css
+++ b/src/app/members-page/member-view/member-view.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .member-view.invite .invite-image-container {
@@ -26,15 +27,33 @@
   margin-right: 8px;
 }
 
+.text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 240px;
+}
+
 .member-view__title {
-  font-size: 22px;
-  text-align: center;
+  font-size: 1.4rem;
+
   margin-bottom: 4px;
 }
 
 .member-view__subtitle {
-  text-align: center;
+
 }
+.member-view__group {
+  font-size: 0.8rem;
+}
+.member-view__status {
+  margin-top: 8px;
+  font-size: 0.8rem;
+  max-width: 240px;
+}
+
+
+
 @media all and (max-width:  768px) {
   .member-view {
     flex-direction: row;
