--- a/src/app/mentors-page/mentors-page.component.html
+++ b/src/app/mentors-page/mentors-page.component.html
@@ -4,7 +4,7 @@
     <div class="mentor-wrapper">
       <div class="mentor">
 
-        <a href=""><img class="image mentor-image" src="../../assets/images/VLADIMIR_UDOVIK.jpg"
+        <a href="https://vk.com/id105362983" target="_blank"><img class="image mentor-image" src="../../assets/images/VLADIMIR_UDOVIK.jpg"
                           alt="Удовик Владимир Евгениевич"></a>
         <div class="mentor-name-wrapper">
           <div class="mentor-surname">Удовик</div>
@@ -13,12 +13,14 @@
         <div class="mentor-position">Художественный руководитель<br> Режиссёр-постановщик</div>
       </div>
       <div class="mentor">
-        <img class="image mentor-image" src="../../assets/images/OLGA_OLEGONA.jpg" alt="Черных Ольга Олеговна">
+        <a href="https://vk.com/olga_chernykh1986" target="_blank"><img class="image mentor-image"
+                                                        src="../../assets/images/OLGA_OLEGONA.jpg"
+                                                        alt="Черных Ольга Олеговна"></a>
         <div class="mentor-name-wrapper">
           <div class="mentor-surname">Черных</div>
           <div class="mentor-name">Ольга Олеговна</div>
         </div>
-        <div class="mentor-position">Помощник руководителя</div>
+        <div class="mentor-position">Помощник режиссера-постановщика</div>
       </div>
     </div>
   </div>
