--- a/src/app/reusable-modules/join-us/join-us.component.css
+++ b/src/app/reusable-modules/join-us/join-us.component.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 0 140px;
+  padding: 0 12px 140px;
 }
 .join-us__label {
   color: var(--purple);
