teacher's page added (and a lot of fixes)

--- a/src/app/main-page/activities-section/activities-section.component.html
+++ b/src/app/main-page/activities-section/activities-section.component.html
@@ -1,7 +1,7 @@
 <section class="activities-section">
 
   <div class="container">
-    <h3 class="section-title">Коллектив собрал в себе разносторонних людей,<br>которым интересно творчество в его
+    <h3 class="section-title">Наша мастерская полна разносторонних "ремесленников",<br>которым интересно творчество в его
       совокупности</h3>
 
     <div class="activities__list">
