--- a/src/app/main-page/final-slogan-section/final-slogan-section.component.html
+++ b/src/app/main-page/final-slogan-section/final-slogan-section.component.html
@@ -6,9 +6,9 @@
     <!--      <div class="text-logo_p2">МАСТЕРСКАЯ</div>-->
     <!--    </div>-->
 <!--    <img class="final-slogan__text-red-logo sl__part sl-1" src="../../assets/images/text-red-logo-micro.png" alt="ТВОРЧЕСКАЯ МАСТЕРСКАЯ">-->
-    <div class="finals-logan__tm">
-      <div class="finals-logan__tm_t">ТВОРЧЕСКАЯ</div>
-      <div class="finals-logan__tm_m">МАСТЕРСКАЯ</div>
+    <div class="finals-logan__tm tm-text-logo sl-1">
+      <div class="finals-logan__tm_t tm-text-logo_t">ТВОРЧЕСКАЯ</div>
+      <div class="finals-logan__tm_m tm-text-logo_m">МАСТЕРСКАЯ</div>
     </div>
     <div class="sl__part sl-2">это</div>
     <div class="sl__part sl-3">коллектив</div>
