--- a/src/app/mentors-page/mentors-page.component.html
+++ b/src/app/mentors-page/mentors-page.component.html
@@ -20,7 +20,7 @@
           <div class="mentor-surname">Черных</div>
           <div class="mentor-name">Ольга Олеговна</div>
         </div>
-        <div class="mentor-position">Помощник режиссера-постановщика</div>
+        <div class="mentor-position">Директор, помощник режиссера</div>
       </div>
     </div>
   </div>
