--- a/src/app/master/header/header.component.html
+++ b/src/app/master/header/header.component.html
@@ -2,12 +2,19 @@
   <div class="container">
     <div class="logo">
       <a class="logo__link-wrapper" routerLink="/">
-        <img class="logo__image" *ngIf="this.currentPath == '/'" src="assets/images/logo-mini.png" alt="Логотип">
+        <img class="logo__image"
+             *ngIf="this.currentPath == '/'"
+             src="assets/images/logo-mini.png"
+             alt="Логотип">
 <!--        <img class="logo__text-image image" *ngIf="true" src="../../../assets/images/text-red-logo-micro.png" alt="Творческая Мастерская">-->
-        <div *ngIf="this.currentPath != '/'" class="tm-text-logo">
-          <div class="tm-text-logo_t">ТВОРЧЕСКАЯ</div>
-          <div class="tm-text-logo_m">МАСТЕРСКАЯ</div>
-        </div>
+<!--        <div *ngIf="this.currentPath != '/'" class="tm-text-logo">-->
+<!--          <div class="tm-text-logo_t">ТВОРЧЕСКАЯ</div>-->
+<!--          <div class="tm-text-logo_m">МАСТЕРСКАЯ</div>-->
+<!--        </div>-->
+        <img *ngIf="this.currentPath != '/'" class="tm-text-logo"
+             class="image logo__text-image"
+             src="../../../assets/images/text-red-logo-micro.png"
+             alt="Творческая Мастерская">
       </a>
     </div>
     <div class="burger-button" (click)="burgerButtonTapped()"></div>
